# robotCode

./: .gitignore  README.md  custom_formatter.py  gui.py  process_queue_data.py  qt5_gui.py  requirements.txt  robot_controller.py  runRobot.py  run_robot.py  static_utilities.py  subsystem.py  test.py
.github/PULL_REQUEST_TEMPLATE/: feature
Actuators/: arduino_controller.py  arduino_serial_interface.py  map_arduino_microseconds_to_thruster_percentage.py  motorCommand.py  torpedo.py
ArduinoScripts/: test.ino
ArduinoScripts/arduino_imu_controlled_serial_thrusters/: arduino_imu_controlled_serial_thrusters.ino
ArduinoScripts/arduino_imu_controlled_serial_thrusters_led_test/: Thruster.cpp  Thruster.h  arduino_imu_controlled_serial_thrusters_led_test.ino
ArduinoScripts/arduino_serial_controller/: arduino_serial_controller.ino
ArduinoScripts/arduino_serial_depth_pressure_controller/: arduino_serial_depth_pressure_controller.ino
ArduinoScripts/arduino_serial_thruster_controller/: arduino_serial_thruster_controller.ino
ArduinoScripts/arduino_serial_thruster_depth_pressure_controller/: arduino_serial_thruster_depth_pressure_controller.ino
GUI/: gui.py  gui_basic_console.py  gui_console.py  logger_text.ui  qt5_gui.py  qt5_gui_2.py  qt_handler.py  robocats_gui_qt5_ui.ui  video_stream.py
Sensors/: hydrophone.py  imu.py  imu_functional.py  vision.py
Sensors/IMUPositionTrackingMaster/: tracker_main.py
UI Files/: robocats_gui_qt5_ui.ui
Vision/: README.md
Vision/OILT/: box_draw.py  converter.py  detect_video (1).py  o1_tester_bins.py  o2_tester_bins.py
Vision/RAVN/: README.md  central_nervous_system.py  motor_system.py  sensory_system.py  wrapper.py
competitionCode2024/ros2_ws/install/subConglomerate/share/subConglomerate/: package.sh  package.xml
competitionCode2024/ros2_ws/install/the_sub/share/the_sub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
competitionCode2024/ros2_ws/install/the_sub/share/the_sub/config/: params.yaml
competitionCode2024/ros2_ws/install/the_sub/share/the_sub/launch/: all_launch.py
old_code/: robot_controller.py
(+1969 files in other folders)
